SET(LIB_ALL_ENCODER_SRC all_encoder.c)
ADD_LIBRARY(all_encoder SHARED ${LIB_ALL_ENCODER_SRC})
SET_TARGET_PROPERTIES(all_encoder PROPERTIES VERSION 1.0 SOVERSION 1)
ADD_LIBRARY(all_encoder_static STATIC ${LIB_ALL_ENCODER_SRC})
SET_TARGET_PROPERTIES(all_encoder_static PROPERTIES OUTPUT_NAME all_encoder)
INSTALL(TARGETS all_encoder all_encoder_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES all_encoder.h DESTINATION include/all_encoder)
