SET(LIB_Z_ENCODE_SRC all_encoder.cpp)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

IF(UNIX)
MESSAGE(STATUS "on linux")

FIND_LIBRARY(LIBX264 x264 ${PROJECT_SOURCE_DIR}/lib/x264)
IF(NOT LIBX264)
MESSAGE(FATAL_ERROR "libx264 not found")
ENDIF()

FIND_LIBRARY(LIBX265 x265 ${PROJECT_SOURCE_DIR}/lib/x265)
IF(NOT LIBX264)
MESSAGE(FATAL_ERROR "libx265 not found")
ENDIF()

MESSAGE(STATUS "x264:" ${LIBX264} "; x265:" ${LIBX265})

ADD_LIBRARY(all_encoder SHARED ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(all_encoder PROPERTIES VERSION 1.0 SOVERSION 1)
ADD_LIBRARY(all_encoder_static STATIC ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(all_encoder_static PROPERTIES OUTPUT_NAME "all_encoder")
#TARGET_LINK_LIBRARIES(all_encoder ${LIBX264})
TARGET_LINK_LIBRARIES(all_encoder ${LIBX265})
INSTALL(TARGETS all_encoder all_encoder_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES all_encoder.h DESTINATION include)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x264/x264.h DESTINATION include/x264)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x264/x264_config.h DESTINATION include/x264)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x265/x265.h DESTINATION include/x265)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x265/x265_config.h DESTINATION include/x265)
ENDIF()

IF(WIN32)
MESSAGE(STATUS "on windows")

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/x265})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/x264})

FIND_LIBRARY(LIBX264 x264 ${PROJECT_SOURCE_DIR}/lib/x264)
IF(NOT LIBX264)
MESSAGE(FATAL_ERROR "libx264 not found")
ENDIF()

FIND_LIBRARY(LIBX265 x265 ${PROJECT_SOURCE_DIR}/lib/x265)
IF(NOT LIBX265)
MESSAGE(FATAL_ERROR "libx265 not found")
ENDIF()


MESSAGE(STATUS "x264_lib:" ${LIBX264})
MESSAGE(STATUS "x265_lib:" ${LIBX265})

ADD_LIBRARY(all_encoder SHARED ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(all_encoder PROPERTIES VERSION 1.0 SOVERSION 1)
ADD_LIBRARY(all_encoder_static STATIC ${LIB_Z_ENCODE_SRC})
SET_TARGET_PROPERTIES(all_encoder_static PROPERTIES OUTPUT_NAME "all_encoder")
TARGET_LINK_LIBRARIES(all_encoder ${LIBX264})
TARGET_LINK_LIBRARIES(all_encoder ${LIBX265})
INSTALL(TARGETS all_encoder all_encoder_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES all_encoder.h DESTINATION include/all_encoder)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x264/x264.h DESTINATION include/x264)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x264/x264_config.h DESTINATION include/x264)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x265/x265.h DESTINATION include/x265)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/x265/x265_config.h DESTINATION include/x265)
ENDIF()
